--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -133,7 +133,7 @@
     </div>
   </div>
 
-  <div class="section-spacing">
+  <!-- <div class="section-spacing">
     <div class="client-section">
       <div class="theme-title-one text-center">
         <h6 class="upper-title">Testimonials</h6>
@@ -141,31 +141,42 @@
       </div>
       <div class="wrapper">
         <div class="client-slider">
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to
-                the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+          <div class="row">
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to
-                the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to
-                the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -267,28 +278,43 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="partent-logo-section">
-    <div class="container">
-      <div id="partner-logo">
-        <div class="row">
-          <div class="col-xl-3 col-lg-4 col-sm-6">
-            <div class="item"><img src="../../../assets/images/logo/1.png" alt="logo"></div>
+  <div class="our-team">
+    <div class="main-content">
+      <div class="row card p-5" style="flex-direction: row;">
+        <div class="col-xl-6 col-lg-6 col-sm-12">
+          <div class="item">
+            <span>
+              {{bioDesc.AboutUs}}
+            </span>
           </div>
-          <div class="col-xl-3 col-lg-4 col-sm-6">
-            <div class="item"><img src="../../../assets/images/logo/2.png" alt="logo"></div>
-          </div>
-          <div class="col-xl-3 col-lg-4 col-sm-6">
-            <div class="item"><img src="../../../assets/images/logo/3.png" alt="logo"></div>
-          </div>
-          <div class="col-xl-3 col-lg-4 col-sm-6">
-            <div class="item"><img src="../../../assets/images/logo/4.png" alt="logo"></div>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-sm-12">
+          <div class="item">
+
+            <div class="single-team-member">
+              <div class="img-box">
+                <img src="../../../assets/images/team/1.jpg" alt="">
+                <ul>
+                  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+              </div>
+              <div class="text">
+                <h6>Ms. Divya Saraf</h6>
+                <p>Dance MANAGER</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
 
   <!-- <div class="container text-center my-3">
     <h3>Bootstrap 4 Multiple Item Carousel</h3>
@@ -318,5 +344,5 @@
     </div>
     <h4>Advances all 4 slides each time</h4>
 </div> -->
-<app-scrollToTop></app-scrollToTop>
+  <app-scrollToTop></app-scrollToTop>
 </div>
