--- a/src/app/pages/our-studio/our-studio.component.html
+++ b/src/app/pages/our-studio/our-studio.component.html
@@ -157,28 +157,42 @@
       </div> 
       <div class="wrapper">
         <div class="client-slider">
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+          <div class="row">
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="item">
-            <div class="text-wrapper">
-              <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout line and chasses to the bus! Thank you for the incredible role models & opportunity. We Love You!”</p>
-              <img src="../../../assets/images/home/3.jpg" alt="">
-              <h6>Mahfuz RIad</h6>
-              <span>Founder</span>
+            <div class="col-xl-4 col-lg-4 col-sm-6">
+              <div class="item">
+                <div class="text-wrapper">
+                  <p>“My 9 year old shuffle-ball-steps her way through the day, twirls in the checkout
+                    line and chasses to the bus! Thank you for the incredible role models & opportunity.
+                    We Love You!”</p>
+                  <img src="../../../assets/images/home/3.jpg" alt="">
+                  <h6>Mahfuz RIad</h6>
+                  <span>Founder</span>
+                </div>
+              </div>
             </div>
           </div>
         </div> 
@@ -186,7 +200,7 @@
     </div> 
   </div>
 
-  <div class="section-spacing">
+  <!-- <div class="section-spacing">
     <div class="our-teachers">
       <img src="../../../assets/images/shape/19.png" alt="" class="main-shape">
       <div class="container">
@@ -238,18 +252,7 @@
         </div>
       </div>
     </div> 
-  </div>
+  </div> -->
 
-  <div class="partent-logo-section">
-    <div class="container">
-      <div id="partner-logo">
-        <div class="item"><img src="../../../assets/images/logo/1.png" alt="logo"></div>
-        <div class="item"><img src="../../../assets/images/logo/2.png" alt="logo"></div>
-        <div class="item"><img src="../../../assets/images/logo/3.png" alt="logo"></div>
-        <div class="item"><img src="../../../assets/images/logo/4.png" alt="logo"></div>
-      </div>
-    </div>
-  </div> 
-  
   <app-scrollToTop></app-scrollToTop>
 </div>
