--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
-<router-outlet (activate)="onActivate($event)" ></router-outlet>
+<div id="loader-wrapper">
+    <div id="loader">
+        <span class="loader-inner"></span>
+    </div>
+</div>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-footer></app-footer>
+
