--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -6,7 +6,7 @@
 
     <div class="right-widget">
       <ul class="clearfix">
-        <li class="cart-button"><a routerLink="/home"><i class="flaticon-credit-card"></i></a></li>
+        <li class="cart-button"><a routerLink="/payment"><i class="flaticon-credit-card"></i></a></li>
         <!-- <li class="search-option">
           <div class="dropdown">
             <button type="button" class="dropdown-button" data-toggle="dropdown"><i
@@ -60,7 +60,7 @@
             </div>
           </li> -->
           <li>
-            <a href="/contact" class="nav-item nav-link active">Contact</a>
+            <a routerLink="/contact" class="nav-item nav-link active">Contact</a>
           </li>
         </ul>
       </nav>
