--- a/src/app/components/shared/whatsapp/whatsapp.component.html
+++ b/src/app/components/shared/whatsapp/whatsapp.component.html
@@ -1,3 +1,5 @@
-<div>
-  <img src='../../../../assets/images/whatsapp.png' alt="">
-</div>
+<a href="https://api.whatsapp.com/send?
+phone=7303009505
+&text=Hello" class="float" target="_blank">
+<img class="whatsapp-icon" src='../../../../assets/images/whatsapp.png' alt="">
+</a>
