--- a/src/app/pages/faculty/faculty.component.html
+++ b/src/app/pages/faculty/faculty.component.html
@@ -1,7 +1,7 @@
 <div class="main-page-wrapper">
 
-  <div class="theme-inner-banner">
-    <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
+  <div class="theme-inner-banner" style="background-size: cover;">
+    <img style="width: 100%;height: 50rem;" src="../../../assets/images/\Nrutyanaad/DSC_8945.jpg" alt="" class="bg-shape">
     <div class="container">
       <h2 class="title">Faculty</h2>
     </div>
