--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -486,8 +486,8 @@ body .theme-button-two:hover:after {right: auto;left: 17px;}
 .banner-image{
     position: relative;
     background-color: #f8fafc;
-    background-image: url('../images/Shraddha_Bhide/DSC_8371.jpg');
-    background-position: left top;
+    background-image: url('../images/Shraddha_Bhide/DSC_8380.jpg');
+    background-position: center;
     background-size: cover;
     z-index: 0;
     height: 59.5rem;
