--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -51,7 +51,7 @@
           </div> -->
     </div>
 
-    <div class="section-spacing our-feature-one">
+    <div class="section-spacing our-feature-one">     
       <img src="../../../assets/images/shape/1.png" alt="" class="shape">
       <div class="container">
         <div class="row">
@@ -62,12 +62,12 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="single-block" data-aos="fade-up" data-aos-delay="150">
+            <div class="single-block">
               <h6>Mission </h6>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. incididunt ut labore et dolore magna aliqua.</p>
             </div>
-            <div class="single-block" data-aos="fade-up" data-aos-delay="250">
+            <div class="single-block">
               <h6>Vision</h6>
               <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt
                 ut labore et dolore magna aliqua. incididunt ut labore et dolore magna aliqua.</p>
@@ -243,8 +243,10 @@
               <div class="col-xl-3 col-lg-4 col-sm-6">
                 <div class="item">
                   <div class="single-team-member">
-                    <div class="img-box"  (click)="scrollTo('item1')">
-                      <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src='../../../assets/images/SNM faculties/Divya Saraf.jpg' alt="">
+                    <div class="img-box" (click)="scrollTo('item1')">
+                      <img
+                        style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;"
+                        src='../../../assets/images/SNM faculties/Divya Saraf.jpg' alt="">
                       <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -263,7 +265,9 @@
                 <div class="item">
                   <div class="single-team-member">
                     <div class="img-box" (click)="scrollTo('item2')">
-                      <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/Amruta Joshi.jpg" alt="">
+                      <img
+                        style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;"
+                        src="../../../assets/images/SNM faculties/Amruta Joshi.jpg" alt="">
                       <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -282,7 +286,8 @@
                 <div class="item">
                   <div class="single-team-member">
                     <div class="img-box" (click)="scrollTo('item3')">
-                      <img style="width:370px;height: 400px;border-radius: 5px;" src="../../../assets/images/SNM faculties/Rashmi Pol.jpg" alt="">
+                      <img style="width:370px;height: 400px;border-radius: 5px;"
+                        src="../../../assets/images/SNM faculties/Rashmi Pol.jpg" alt="">
                       <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -301,7 +306,8 @@
                 <div class="item">
                   <div class="single-team-member">
                     <div class="img-box" (click)="scrollTo('item4')">
-                      <img style="width:370px;height: 400px;border-radius: 5px;" src="../../../assets/images/SNM faculties/Ashwarya Chodnekar.JPG" alt="">
+                      <img style="width:370px;height: 400px;border-radius: 5px;"
+                        src="../../../assets/images/SNM faculties/Ashwarya Chodnekar.JPG" alt="">
                       <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -322,7 +328,7 @@
       </div>
     </div>
 
-    <!-- <app-whatsapp></app-whatsapp> -->
+    <app-whatsapp></app-whatsapp>
     <app-scrollToTop></app-scrollToTop>
 
   </div>
